ggplot 0.6
----------------------------------------

  * convenient auto wrapping of simple summary functions for stat_sum
  * better documentation for stat_sum
  * na.rm added to the following statistics: stat_boxplot, stat_contour, stat_density2d, stat_qq, stat_density
  * fixed bug in stat_bin which resulted in increased counts when the x axis was a categorical variable with a single level
  * fixed bug in geom_smooth where if se=FALSE x axis always includes 0

Speed and documentation.  Profiling and complete rdoc documentation

  * allow qplot to use computed aesthetics too
  * add start and direction parameters to coord_polar, giving more control over the layout of the polar coords
  * added my favourite pie chart example to coord_polar
  * fixed some examples where grob used instead of guide
  
Examples

  * now easy to run all examples with all_examples_run(), or for an individual object with (e.g.) GeomPoint$examples_run()

See CHANGELOG for changes in previous versions